--- a/components/scss/_colours.scss
+++ b/components/scss/_colours.scss
@@ -1,5 +1,7 @@
 $plum: #2d1440;
 $light-plum: #502475;
 $deep-plum: #15091b;
+$grey-plum: #d1c9d6;
 $aqua: #7bebe1;
+$dark-aqua: #156b61;
 $orchid: #faf9ff;
