--- a/components/scss/style.scss
+++ b/components/scss/style.scss
@@ -4,13 +4,14 @@
 
 @import 'colours';/* all our custom colours */
 
-html, body {
+html, body, button {
 	font-family: 'Quattrocento Sans', 'Helvetica', Arial, sans-serif;
 }
 
 /* main app container */
 .appContainer {
 	background-color: $orchid;
+	height:100vh;
 }
 
 p, ul, ol, li, a {
@@ -27,11 +28,76 @@ h1 {
 	}
 }
 
+.fieldWrapper {
+	width: 100%;
+	display: block;
+	overflow: auto;
+	padding: 5px 0;
+}
+
+label {
+	display: flex;
+	align-items: center;
+	width: 20%;
+	float: left;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+
 input, textarea {
 	padding: 10px;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
+	width: 60%;
+	float: left;
+	margin-bottom: 10px;
+	border: 1px solid $light-plum;
+	-webkit-transition: all 0.30s ease-in-out;
+	  -moz-transition: all 0.30s ease-in-out;
+	  -ms-transition: all 0.30s ease-in-out;
+	  -o-transition: all 0.30s ease-in-out;
+	outline: none;
+}
+
+input[type=text]:focus, textarea:focus {
+  box-shadow: 0 0 8px rgba(80, 36, 117, 0.71);
+  border: 1px solid $light-plum;
+}
+
+button {
+  background: #7bebe2;
+  background-image: -webkit-linear-gradient(top, #7bebe2, #5ac7bc);
+  background-image: -moz-linear-gradient(top, #7bebe2, #5ac7bc);
+  background-image: -ms-linear-gradient(top, #7bebe2, #5ac7bc);
+  background-image: -o-linear-gradient(top, #7bebe2, #5ac7bc);
+  background-image: linear-gradient(to bottom, #7bebe2, #5ac7bc);
+  -webkit-border-radius: 3;
+  -moz-border-radius: 3;
+  border-radius: 3px;
+  font-family: 'Quattrocento Sans', 'Helvetica', Arial, sans-serif !important;
+  font-weight: 600;
+  letter-spacing: 1.1px;
+  color: $orchid;
+  font-size: 20px !important;
+  padding: 20px 35px;
+  text-shadow: 1px 1px 1px $dark-aqua;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  margin-top: 30px !important;
+  text-transform: uppercase !important;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #5ac7bc;
+  background-image: -webkit-linear-gradient(top, #5ac7bc, #7bebe2);
+  background-image: -moz-linear-gradient(top, #5ac7bc, #7bebe2);
+  background-image: -ms-linear-gradient(top, #5ac7bc, #7bebe2);
+  background-image: -o-linear-gradient(top, #5ac7bc, #7bebe2);
+  background-image: linear-gradient(to bottom, #5ac7bc, #7bebe2);
+  text-decoration: none;
 }
 
 /* HEADER */
@@ -41,6 +107,12 @@ input, textarea {
 	color: #ffffff;
 	display: flex;
 	justify-content: space-between;
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
+	-webkit-box-shadow: 0px 3px 8px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 3px 8px -3px rgba(0,0,0,0.75);
+	box-shadow: 0px 3px 8px -3px rgba(0,0,0,0.75);
 
 	/* the wrapper for the logo section of the header */
 	.logoContainer {
@@ -93,19 +165,41 @@ input, textarea {
 div.main {
 	display: flex;
 	flex-direction: row;
+	top: 78.88px;
+    position: relative;
 }
 
 /* the navigation sidebar */
 aside {
-	background-color: $plum;
+	background-color: $grey-plum;
 	padding: 15px 0;
 
-	.sidebarLink {
+	nav {
 		width: 100%;
-		padding: 15px 25px;
-		text-align: center;
 		font-size: 20px;
 		color: $orchid;
+
+		ul {
+			list-style-type: none;
+			text-align: left;
+		    margin: 0;
+		    padding: 0;
+		}
+
+	    li {
+			padding: 15px 25px;
+	    }
+
+	    li a {
+			color: $deep-plum;
+			text-decoration: none;
+			padding: 15px 10px;
+		}
+
+		li:hover {
+			text-decoration: underline;
+		}
+		
 	}
 }
 
@@ -115,6 +209,31 @@ aside {
 	float: left;
 	flex: 1;
 	color: $deep-plum;
+}
+
+.addContactBtn {
+	display: flex;
+	align-items: center;
+	position: fixed;
+	top: 95px;
+	right: 10px;
+	width: 62px;
+	height: 62px;
+	background: $aqua;
+	color: $orchid;
+	text-shadow: 1px 1px 1px $dark-aqua;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	padding: 15px 20px 20px 21px;
+	font-family: 'Quattrocento Sans', 'Helvetica', Arial, sans-serif;
+	font-size: 40px;
+	z-index: 9999;
+	text-decoration: none;
+
+	::hover {
+		text-decoration: none;
+	}
 }
 
 /* CONTACT PREVIEW */
@@ -137,4 +256,10 @@ aside {
 
 .previewName {
 	font-size: 20px;
+}
+
+/* ADD CONTACT PAGE */
+.add-contact-container {
+
+	
 }
