--- a/components/scss/style.scss
+++ b/components/scss/style.scss
@@ -12,6 +12,7 @@ html, body, button {
 .appContainer {
 	background-color: $orchid;
 	height:100vh;
+	display: flex;
 }
 
 p, ul, ol, li, a {
@@ -165,6 +166,7 @@ button:hover {
 div.main {
 	display: flex;
 	flex-direction: row;
+	flex: 1;
 	top: 78.88px;
     position: relative;
 }
@@ -209,6 +211,7 @@ aside {
 	float: left;
 	flex: 1;
 	color: $deep-plum;
+	background-color: $orchid;
 }
 
 .addContactBtn {
@@ -216,7 +219,7 @@ aside {
 	align-items: center;
 	position: fixed;
 	top: 95px;
-	right: 10px;
+	right: 15px;
 	width: 62px;
 	height: 62px;
 	background: $aqua;
